fix resolutions for smaller screens

--- a/index.html
+++ b/index.html
@@ -156,9 +156,8 @@
       <!--Assignment name-->
       <img
         src="./Academic-Gallery/AO2.JPG"
-        width="auto"
-        height="800px"
         class="image imagefix2"
+        style="height: auto; width: 80%"
       />
       <!-- #ID# #PICTURE# Change to a picture of YOUR assignment images -->
 
@@ -171,6 +170,7 @@
         width="auto"
         height="800px"
         class="image imagefix2"
+        style="height: auto; width: 80%"
       />
       <!-- #ID# #PICTURE# Change to a picture of YOUR assignment images -->
 
@@ -183,6 +183,7 @@
         width="auto"
         height="800px"
         class="image imagefix2"
+        style="height: auto; width: 80%"
       />
       <!-- #ID# #PICTURE# Change to a picture of YOUR assignment images -->
 
@@ -216,9 +217,8 @@
 
         <img
           src="./Academic-Gallery/solar.JPG"
-          width="auto"
-          height="400px"
           class="image imagefix2"
+          style="height: auto; width: 80%"
         /><!-- #ID# #PICTURE# Change to a picture of YOUR assignment images -->
 
         <div class="flexBoxCentered">
